# BRIAN

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEMO_LINTER_AND_COMPILER.md  DSL_EXTRACTION_COMPLETE.md  NEURO_DSL_SETUP_SUMMARY.md  README.md  README.template.md  STEP1500_INVESTIGATION_COMPLETE.md  VSCODE_TROUBLESHOOTING.md  _deploy_ood.py  _deploy_train.py  _smoke_test_modules.py  _test_fwd.py  architecture.md  brian.toml  brian_ood_test.py  colab_run.ipynb  colab_train_minimal_cpu.py  colab_train_thsd.py  colab_train_tiny_cpu.py  debug_thsd_parser.py  insert_smoke_cell.py  mechanics.md  ood_results_baseline-80k.json  ood_results_rezero.json  ood_results_synth-30m.json  package.json  pyproject.toml  requirements.txt  setup.py  test_brian_compile.py  test_rcc_bowtie_dsl.py  test_step1500_fix.sh  train_evol_dna_local.py
.brian/: LOG_RESTRUCTURE_PLAN.md  LOG_RESTRUCTURE_SUMMARY.md  README_TEMPLATE_V2_SUMMARY.md  best_run.ln  checkpoint.ln  migrations.json
.claude/: settings.json  settings.local.json
.githooks/: pre-commit
.neuro/: exports.toml  sample_heatmap.json  search_ledger.json  test_durations.json
checkpoints/: neuroslm_small_chat_3000.pt  neuroslm_small_chat_3500.pt  neuroslm_tiny_1.pt
collectors/: __init__.py  arch_topology.py  checkpoint_config.py  expert_params.py  expert_roster.py  h21_derived.py  hypothesis_ledger.py  layer_b_results.py  maturation_gate.py  model_params.py  nfg_topology.py  personality.py  presets.py  test_counts.py
deploy/: README.md  ood_eval.py  train_dsl.py
discoveries/: README.md  schema.json
docs/: BRIAN.md  CDGA.md  CLI.md  DSL_REFACTOR.md  EMERGENT_TOPOLOGY.md  FINDINGS.md  NEURAL_FIELD_OSCILLATOR.md  OOD_MECHANISMS.md  README.md  README.template.example.md  README.template.md  REPO_SETUP.md  STATIC_ANALYSIS_PLAN.md  STEP1500_FIX_SUMMARY.md  STEP1500_INVESTIGATION.md  THSD_IMPLEMENTATION_SUMMARY.md  THSD_REFACTOR_PLAN.md  architecture.md  changelog.md  dsl.md  dsl_editor_setup.md  dsl_nn_language.md  dsl_subsystem_roadmap.md  findings.md  formal_framework.md  harness.md  heatmap_evolution_plan.md  history.md  metrics.md  readme_metrics.toml  readme_template_language.md  runs.md  ste.md  technical_report.md  thsd_formal_verification.md
dynamics/: adamw.neuro  cosine_schedule.neuro  dropout.neuro  ema_weights.neuro  gradient_clipping.neuro  label_smoothing.neuro  lion.neuro  muon.neuro  weight_decay.neuro  wsd_schedule.neuro  z_loss.neuro
hooks/: README.md  pre-deploy.yaml
hypothesis/: H001_phi_monotone_under_coupling_addition.md  H002_ood_gap_decrease_under_cdga.md  H003_symbolic_sparsity_collapse.md  H004_triple_guard_soundness.md  H005_improvementgate_welch_correctness.md  H006_capacity_funneled_distillation_implode.md  H007_gif_adaptive_ramp_convergence.md  H008_gif_label_smoothing_gap_reduction.md  README.md  (+12 more)
(+1571 files in other folders)
