[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroslm"
version = "0.1.0"
description = "BRIAN — biologically-inspired SLM with DSL-defined architectures"
requires-python = ">=3.10"
# CLI + analysis + deploy. These are what `pip install -e .` pulls in
# so the `brian` command works out of the box. Heavy ML deps (torch,
# transformers, datasets) are under [project.optional-dependencies.ml]
# so a fresh CLI install doesn't need a 3 GB torch download.
dependencies = [
    "sympy>=1.12",
    "matplotlib>=3.7",
    "networkx>=3.0",
    "vastai>=0.1",
    "pytest>=7.0",
]

[project.optional-dependencies]
# `pip install -e .[ml]` adds the heavy training/eval ML deps.
ml = [
    "torch>=2.0",
    "transformers>=4.30",
    "datasets>=2.10",
    "tiktoken>=0.5",
    "einops>=0.7",
]
# `pip install -e .[dev]` adds testing/lint deps.
dev = [
    "pytest-cov>=4.0",
]
# `pip install -e .[studio]` adds the Brian Studio web server deps.
studio = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
# `pip install -e .` puts this on your PATH as `brian`.
brian = "neuroslm.cli:main"

[tool.setuptools.packages.find]
include = ["neuroslm*", "studio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: heavyweight symbolic / SymPy tests (skipped by default; run with `-m slow`)",
]
addopts = "-m 'not slow'"
